@@ -5,3 +5,8 @@
 // To create a MSIX installer, run the following command:
 // ****** NOTE: Don't forget to change version in pubspec.yml before create package
 PS c:\src\flutter_project> dart run msix:create
+
+
+### ANDROID RELEASE
+Remember to change versionCode before upload AppBundle to Google Console
+Go to pubspec.yml to change version: 1.0.2+2
